# GitAssisstant

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  allowed_signers  exit  start-dev.ps1  start.ps1  web_启动说明.md
agent/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  pyproject.toml  web_启动说明.md  分工.md  系统设计图.md
agent/backend/: .env  .env.example  pyproject.toml  后端部分.md
agent/backend/agent_eval_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent/backend/app/: main.py
agent/backend/app/api/: router.py
agent/backend/app/repositories/: task_repository.py
agent/frontend/: Dockerfile  index.html  package.json  前端部分.md
agent/frontend/src/: App.tsx  styles.css
agent/gitIssueAssitant/: __main__.py  agent.py  agent_state.py  github_pr.py  orchestrator.py  persistence.py  sandbox.py  session_manager.py
agent/gitIssueAssitant/CLI/: main.py
agent/gitIssueAssitant/RESTAPIAdapter/: __init__.py  main.py  后端部分.md
agent/gitIssueAssitant/cli_utils/: __init__.py  commit.py  git.py  reports.py
agent/gitIssueAssitant/core/: __init__.py
agent/gitIssueAssitant/skills/: __init__.py  registry.py
agent/gitIssueAssitant/tools/: GitIssueAssitant工具接口文档.md  registry.py  sandbox_manager.py  tools.py
agent/gitIssueAssitant/utils/: compressor.py
agent/git_issue_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
iteration1_eval/: README.md  (+3 more)
iteration2_eval/backend/: .env  .env.example  Dockerfile  pyproject.toml
iteration2_eval/backend/agent_eval_backend.egg-info/: PKG-INFO  SOURCES.txt
iteration2_eval/backend/app/: main.py
iteration2_task2/backend/: .env.example  Dockerfile  README.md  agent_eval.db  docker-compose.yml  pyproject.toml
iteration2_task2/backend/app/: main.py
iteration2_task2/backend/exports/: eval-001_20260507_155613.json  eval-001_20260507_155618.md
(+255 files in other folders)
