[project]
name = "git-issue-assistant"
version = "0.1.0"
description = "gitIssueAssitant core, CLI, and REST API adapter"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
    "uvicorn[standard]>=0.30.6",
    "ragas>=0.2.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
