[project]
name = "agent-eval-backend"
version = "0.1.0"
description = "Backend skeleton for an Agent evaluation platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "uvicorn[standard]>=0.30.6",
    "ragas>=0.2.0",
    "langchain-openai>=0.2.14",
    "langchain-community>=0.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*"]
